# sqlmodel-spl

./: .cz.json  .gitignore  CHANGELOG.md  pyproject.toml
app/: add.py  db.py  delete.py  many.py  read.py  relationship.py  update.py
